# VirscientTechnical

./: .gitignore  CMakeLists.txt  README.MD  deploy_client.sh
client/: client.c
server/: server.c
